--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "^5.0.1"
   }
 }
